# tg-booking-crm

./: .env.example  .gitignore  README.md  auto_reload.py  config.py  main.py  pyproject.toml
db/: database.py
handlers/: admin_handlers.py  user_handlers.py
handlers/user/: __init__.py  start.py
keyboards/: keyboards.py
middlewares/: cancel_middleware.py
models/: models.py
repositories/: booking_repo.py  contacts_repo.py  employee_repo.py  loyalty_repo.py  message_repo.py  service_repo.py  user_repo.py
services/: booking_service.py  contacts_service.py  employee_service.py  loyalty_service.py  service_service.py  user_service.py
utils/: reminders.py  slots.py
